--- a/index.html
+++ b/index.html
@@ -25,53 +25,76 @@
                     <div class="col-sm-12">
                         <h1 class="display-3">Dmytro Plekhotkin</h1>
                         <p>Software engineer with more than 6 years experience developing web and desktop applications on different programming languages including Java and JavaScript. Willing to work hard to develop retail and other businesses.</p>
-                        <form action="" class="form-inline">
-                            <div class="form-group mb-2 mr-sm-2 mb-sm-0">
-                                <label class="sr-only" for="nameInput">Name</label>
-                                <input type="text" class="form-control form-control-lg" placeholder="Jane Doe" id="nameInput">
-                            </div>
-                            <div class="form-group mb-2 mr-sm-2 mb-sm-0">
-                                <label class="sr-only" for="emailInput">Email</label>
-                                <input type="email" class="form-control form-control-lg" placeholder="jane.doe@example.com" id="emailInput">
-                            </div>
-                            <button type="button" class="btn btn-success btn-lg">okay, go</button>
-                        </form>
 
                         <br>
 
-                        <a href="#nav-main" class="btn btn-outline-secondary btn-sm" role="button">&darr;</a>
+                        <a id="to-projects" href="#projects" class="btn btn-outline-secondary btn-sm" role="button">&darr;</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <nav class="navbar navbar-toggleable-md navbar-inverse  bg-inverse" id="#nav-main">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">
-            <img src="img/logo.jpg" width="30" height="30" alt="">
-        </a>
+    <section id="projects">
+        <div class="section-content">
+            <div class="container">
+                <h2>Projects</h2>
+                <p class="lead">Here are some of the projects that I've done so far.</p>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="card-columns">
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/projects/proffstore.png" alt="Screenshot of proffstore project">
+                                <div class="card-block">
+                                    <h4 class="card-title">Proffstore analytics</h4>
+                                    <p class="card-text">The goal of the project is to gather information from different sites for freelancer and show picture of popularity different languages and types of jobs.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/projects/caesar.png" alt="Screenshot of caesar project">
+                                <div class="card-block">
+                                    <h4 class="card-title">Caesar cipher</h4>
+                                    <p class="card-text">Caesar cipher implementation using Java and Bootstrap deployed to <a href="https://rotn-web.herokuapp.com/">Heroku</a>.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/projects/ultimate.png" alt="Screenshot of ultimate project">
+                                <div class="card-block">
+                                    <h4 class="card-title">Ultimate frisbee stats</h4>
+                                    <p class="card-text">The purpose of the project is to help gather and show statistics for ultimate frisbee games.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/projects/tic-tac-toe.png" alt="Screenshot of tic-tac-toe project">
+                                <div class="card-block">
+                                    <h4 class="card-title">Tic-tac-toe game</h4>
+                                    <p class="card-text">I implemented tic-tac-toe game using Java and Bootstrap and deployed it to <a href="https://xo-web.herokuapp.com/">Heroku</a>.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/projects/project1.png" alt="Screenshot of article loader project">
+                                <div class="card-block">
+                                    <h4 class="card-title">Article processor</h4>
+                                    <p class="card-text">This project I've developed as a freelancer. My customer asked me to implement a business-specific program that automates processing of articles.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top img-fluid" src="img/projects/project2.png" alt="Screenshot of waste management game">
+                                <div class="card-block">
+                                    <h4 class="card-title">Waste management game</h4>
+                                    <p class="card-text">This game I've developed during Frist Global Virtual Hackathon</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
+    </section>
 
     <section id="carousel">
         <div id="carousel-home" class="carousel slide" data-ride="carousel">
@@ -82,24 +105,24 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="img/woman-camera.jpg" alt="Woman taking picture with a camera">
+                    <img class="d-block img-fluid" src="img/team.jpg" alt="I standing near the pool with my team at REMIT">
                     <div class="carousel-caption d-none d-md-block">
-                        <h3>A woman with camera</h3>
-                        <p>She is probably taking a picture</p>
+                        <h3>My team</h3>
+                        <p>We work together on REMIT(I am first from the right)</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="img/spiderweb.jpg" alt="A wet spiderweb">
+                    <img class="d-block img-fluid" src="img/workplace.jpg" alt="A wet spiderweb">
                     <div class="carousel-caption d-none d-md-block">
-                        <h3>Down came the rain</h3>
-                        <p>And washed the spider out</p>
+                        <h3>My workplace</h3>
+                        <p>I used to eat cakes a lot, but now I am done with it. Only healthy food.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block img-fluid" src="img/hearthand.jpg" alt="Two hands making a heart">
                     <div class="carousel-caption d-none d-md-block">
-                        <h3>Making love</h3>
-                        <p>With their hands...</p>
+                        <h3>I love what I do</h3>
+                        <p>Programming is a very good job for me. I enjoy creating software.</p>
                     </div>
                 </div>
             </div>
@@ -113,6 +136,109 @@
             </a>
         </div>
     </section>
+
+    <section id="what-we-do">
+        <div class="section-content">
+            <div class="container">
+                <h2>What I can offer to you</h2>
+                <p>I have experience working on a big and small companies. Also I used to work as a freelancer. Beside that I teach students programming using Java, JavaScript etc. When I have some free time I participate in hackathons and visit converences.</p>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="card-group">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title">Education &amp; Support</h4>
+                                    <h6 class="card-subtitle mb-2 text-muted">I teach programming</h6>
+                                    <p class="card-text"></p>
+                                </div>
+                                <img src="img/chalkboard.jpg" alt="a chalkboard">
+                                <div class="card-block">
+                                    <p class="card-text">I teach basics of Java language for back-end development and HTML, CSS, JavaScript for front-development.</p>
+                                    <!--<button class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Learn more</button>-->
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title">Prototyping &amp; Hacking</h4>
+                                    <h6 class="card-subtitle mb-2 text-muted">I can create prototypes fast</h6>
+                                    <p class="card-text"></p>
+                                </div>
+                                <img src="img/thinking.jpg" alt="working on a laptop">
+                                <div class="card-block">
+                                    <p class="card-text">If you have an idea I can prototype it fast using different methods. Also I participate in hackathons and sometimes win.</p>
+                                    <!--<button class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Learn more</button>-->
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title">Programming &amp; Testing</h4>
+                                    <h6 class="card-subtitle mb-2 text-muted">I write computer software</h6>
+                                    <p class="card-text"></p>
+                                </div>
+                                <img src="img/hacking.jpg" alt="fingers typing on a keyboard">
+                                <div class="card-block">
+                                    <p class="card-text">I have a regular job as a software developer where I am a part of a team. We work with startups and enterprise customers.</p>
+                                    <!--<button class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Learn more</button>-->
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="section-content">
+            <div class="container">
+                <div class="col-md-6">
+                    <div class="about-text">
+                        <h3>About me</h3>
+                        <p>I am giver, curious, active, highly motivated person. Sometimes rude and selfish.</p>
+                        <p>I like playing drums, ultimate frisbee and boardgames.</p>
+                        <h4>My programming Skills</h4>
+
+                        <ul>
+                            <li>Java, Collections framework, JavaBeans, JDBC, Logging</li>
+                            <li>Java EE, Servlets, JSP, REST</li>
+                            <li>Unix administration, Bash scripting, SQL, XML, XPath, JSON</li>
+                            <li>Spring Framework, Spring MVC, FreeMarker, JUnit, Antlr4</li>
+                            <li>Maven, Gradle</li>
+                            <li>MySQL, PostgreSQL, MongoDB</li>
+                            <li>HTML, CSS, JavaScript, jQuery, Twitter Bootstrap</li>
+                            <li>Sonar, Jenkins, PhantomJS</li>
+                            <li>Git, SVN, JIRA, GitLab, Trello</li>
+                            <li>Tomcat, Jetty</li>
+                            <li>IntelliJ IDEA, Eclipse, FindBugs, PMD</li>
+                            <li>Agile, SCRUM</li>
+                            <li>Intermediate English level</li>
+                        </ul>
+
+                        <h5>Follow me on the web</h5>
+                        <a href="https://twitter.com/dplekh" class="btn btn-sm btn-outline-secondary">twitter</a>
+                        <a href="https://www.facebook.com/dmytro.plekhotkin" class="btn btn-sm btn-outline-secondary">facebook</a>
+                        <a href="https://github.com/plekhotkindmytro" class="btn btn-sm btn-outline-secondary">github</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <p>Copyright 2017. Dmytro Plekhotkin</p>
+                </div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
