--- a/index.html
+++ b/index.html
@@ -35,6 +35,30 @@
         </div>
     </section>
 
+    <nav class="navbar justify-content-center navbar-toggleable-md navbar-light bg-faded" id="#nav-main">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#carousel">Photo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#what-we-do">What I do</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <section id="projects">
         <div class="section-content">
             <div class="container">
