--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                         <br>
 
-                        <a id="to-projects" href="#projects" class="btn btn-outline-secondary btn-sm" role="button">&darr;</a>
+                        <a id="to-projects" href="#navbarSupportedContent" class="btn btn-outline-secondary btn-sm" role="button">&darr;</a>
                     </div>
                 </div>
             </div>
