Add target=_blank to social media links

--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
                         </ul>
 
                         <h5>Follow me on the web</h5>
-                        <a href="https://twitter.com/dplekh" class="btn btn-sm btn-outline-secondary">twitter</a>
-                        <a href="https://www.facebook.com/dmytro.plekhotkin" class="btn btn-sm btn-outline-secondary">facebook</a>
-                        <a href="https://github.com/plekhotkindmytro" class="btn btn-sm btn-outline-secondary">github</a>
+                        <a href="https://twitter.com/dplekh" class="btn btn-sm btn-outline-secondary" target='_blank'>twitter</a>
+                        <a href="https://www.facebook.com/dmytro.plekhotkin" class="btn btn-sm btn-outline-secondary" target='_blank'>facebook</a>
+                        <a href="https://github.com/plekhotkindmytro" class="btn btn-sm btn-outline-secondary" target='_blank'>github</a>
                     </div>
                 </div>
             </div>
