--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     <section id="what-we-do">
         <div class="section-content">
             <div class="container">
-                <h2>What I can offer to you</h2>
-                <p>I have experience working on a big and small companies. Also I used to work as a freelancer. Beside that I teach students programming using Java, JavaScript etc. When I have some free time I participate in hackathons and visit converences.</p>
+                <h2>What I can offer you</h2>
+                <p>I have experience working on a big and small companies. Also I used to work as a freelancer. Beside that I teach students programming using Java, JavaScript etc. When I have some free time I participate in hackathons and visit conferences.</p>
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="card-group">
